--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm test --watchAll=false
+    - run: npm build
+    - run: npm test
